tests/typing/fail/0011_intros1.ec
lemma toto : forall (p:bool), p => p
proof.
  intros p H1 H2.
